--- a/paper/main.tex
+++ b/paper/main.tex
@@ -24,7 +24,7 @@ criteria---which we term \emph{functional analogy}.
 A criterion-ablation experiment ($n$=30 per condition, seeds held out from
 calibration) demonstrates that disabling any single criterion causes
 statistically significant population decline (Mann-Whitney $U$,
-Holm-Bonferroni corrected, all $p < 0.016$), with Cohen's $d$ ranging from
+Holm-Bonferroni corrected, all $p \leq 0.016$), with Cohen's $d$ ranging from
 0.57 to 18.1.
 The strongest effects arise from disabling reproduction ($\Delta$=--89.3\%),
 response to stimuli ($\Delta$=--88.4\%), and metabolism ($\Delta$=--84.3\%),
@@ -163,8 +163,8 @@ Coralai    & 3 & 3 & 2 & 3 & 3 & 3 & 3 & 20 \\
 
 While ALIEN achieves Level~4 on four criteria, it lacks multi-step metabolism
 (Level~3) and active homeostasis (Level~2).
-Our system is the first to achieve Level~5 on any criterion (metabolism) and
-to reach $\geq$4 on five of seven criteria, with the highest total score (27)
+Our system achieves Level~5 on metabolism---the only system to do so---and
+reaches $\geq$4 on five of seven criteria, with the highest total score (27)
 across all systems surveyed.
 
 % ============================================================================
@@ -412,7 +412,7 @@ Thus, each criterion qualifies as a functional analogy, not a simplified proxy.
 The ablation results reveal a hierarchy of necessity.
 Reproduction, response, and metabolism form an essential triad---their removal
 causes $>$84\% population collapse.
-Homeostasis and boundary maintenance occupy a middle tier ($\sim$59--77\%
+Homeostasis and boundary maintenance occupy a middle tier ($\sim$58--77\%
 decline), modulating organism fitness without being immediately lethal.
 Growth occupies a similar middle tier ($\sim$37\% decline).
 Evolution shows the weakest short-term effect ($\sim$5\% decline), suggesting
