feat: address peer review feedback (Major Revision Round 2) (#18)
* feat: add bootstrap CIs, short-horizon analysis, coupling correlations, violin plot

Phase 1 analysis for peer review round 2:
- Bootstrap CIs for Cliff's delta and Cohen's d CIs in analyze_results.py
- Short-horizon viability analysis (T=500) for individual-level survival
- Time-lagged cross-correlation coupling analysis (new analyze_coupling.py)
- Violin/strip distribution plot (fig_distributions.pdf)
- Regenerated statistics JSON with all new fields

* feat: address peer review feedback in paper (2a-2k)

Paper edits for Major Revision Round 2:
- 2a: Add Outcome Measures subsection (organism identity, death, DVs)
- 2b: Add environmental/compute parameters (resource rate, RNG ordering)
- 2c: Replace Table 2 with mechanism-specification table (5-column)
- 2d: Title "Satisfying" → "Implementing"; criterion maturity paragraph
- 2e: Replace Cohen's d with Cliff's δ [95% CI] in ablation table
- 2f: Add distribution figure (fig_distributions.pdf)
- 2g: Add short-horizon viability analysis (T=500) in Results
- 2h: Add quantitative coupling evidence (time-lagged correlations)
- 2i: Strengthen comparison table footnotes; temper "highest total" claim
- 2j: Add "Are criteria merely engineered?" FAQ paragraph
- 2k: Add contribution clarification sentence
- Compress Related Work and contributions list to recover space

* docs: add full peer review content for 2026-02-15 round

* fix: migrate to ALIFE 2026 template format and fix table layout

- Add ALIFE 2026 submission metadata (type, copyright, data URL)
- Add hyperref/url packages and blfootnote command
- Fix overfull hbox in mechanism table (footnotesize + column tuning)
- Fix overfull hbox in ablation table (compact column headers)
- Fix overfull hbox in pairwise table (abbreviated headers)
- Restore "Are criteria merely engineered?" paragraph (2j)
- Add tectonic compilation instructions to AGENTS.md
- Paper fits 8 pages excluding references per ALIFE 2026

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,8 +1,16 @@
 \documentclass[letterpaper]{article}
 \usepackage{natbib,alifeconf}
-\usepackage{graphicx,amsmath,booktabs,xcolor,multirow}
+\usepackage{graphicx,amsmath,amssymb,booktabs,xcolor,multirow}
+\usepackage{url,hyperref}
 
-\title{Digital Life: Satisfying Seven Biological Criteria\\Through Functional Analogy and Criterion-Ablation}
+\newcommand\blfootnote[1]{%
+  \begingroup
+  \renewcommand\thefootnote{}\footnote{#1}%
+  \addtocounter{footnote}{-1}%
+  \endgroup
+}
+
+\title{Digital Life: Implementing Seven Biological Criteria\\Through Functional Analogy and Criterion-Ablation}
 \author{Anonymous}
 
 \begin{document}
@@ -10,8 +18,8 @@
 
 % ============================================================================
 \begin{abstract}
-We present a testable integration of all seven textbook biological criteria
-for life---cellular organization, metabolism, homeostasis, growth,
+We present a testable integration implementing all seven textbook biological
+criteria for life---cellular organization, metabolism, homeostasis, growth,
 reproduction, response to stimuli, and evolution---as functionally
 interdependent computational processes within a single artificial life system.
 Existing systems implement at most a subset of these criteria, often as
@@ -38,6 +46,10 @@ The strongest single-ablation effects arise from disabling reproduction
 interdependent components of organismal viability rather than decorative
 labels.
 \end{abstract}
+
+Submission type: \textbf{Full Paper}\\
+Data/Code available at: \url{https://anonymous.4open.science/}
+\blfootnote{\textcopyright\ 2026 Authors. Published under a Creative Commons Attribution 4.0 International (CC BY 4.0) license.}
 
 % ============================================================================
 \section{Introduction}
@@ -80,72 +92,48 @@ The contribution is methodological---demonstrating that all seven criteria
 \emph{can} be integrated as interdependent processes and that their necessity
 can be rigorously tested.
 
-This paper makes four contributions:
-\begin{enumerate}
-  \item A hybrid swarm-organism architecture integrating all seven biological
-    criteria as functionally interdependent processes.
-  \item An operational definition of \emph{functional analogy} with three
-    falsifiable conditions.
-  \item A \emph{criterion-ablation} methodology demonstrating each criterion's
-    functional necessity via controlled experiments with multiple-comparison
-    correction.
-  \item Pairwise ablation and proxy control experiments characterizing
-    criterion interactions and ruling out tautological definitions.
-\end{enumerate}
+This paper contributes: (1)~a hybrid swarm-organism architecture integrating
+all seven criteria as functionally interdependent processes;
+(2)~an operational definition of \emph{functional analogy} with three
+falsifiable conditions; (3)~a \emph{criterion-ablation} methodology
+demonstrating each criterion's functional necessity with multiple-comparison
+correction; and (4)~pairwise ablation and proxy control experiments
+characterizing criterion interactions and ruling out tautological definitions.
+The key contribution is not a new digital organism per se, but a falsifiable
+experimental framework for testing the functional necessity and interaction
+of life criteria in any ALife system.
 
 % ============================================================================
 \section{Related Work}
 
-Artificial life research has produced diverse computational substrates, each
-excelling along different axes of biological fidelity.
-We organize the landscape by methodological approach rather than chronology.
-
-\paragraph{Evolutionary platforms.}
-Tierra \citep{ray_1991_approach} and Avida \citep{ofria_2004_avida} pioneered
-self-replicating digital organisms with mutation and natural selection,
-achieving strong evolutionary dynamics (Level~5 on our rubric).
-However, organisms lack spatial bodies, metabolic processes, and boundary
-maintenance---criteria 1--4 receive minimal or no implementation.
-Polyworld \citep{yaeger_1994_computational} adds neural-network-driven behavior
-and simple energy budgets, though its metabolism operates as a dynamic
-single-resource process rather than a multi-step network.
-
-\paragraph{Continuous and particle-based systems.}
-Lenia \citep{chan_2019_lenia} demonstrates emergent lifelike patterns in
-continuous cellular automata, exhibiting coherent spatial organization and
-growth.
-Flow-Lenia \citep{plantec_2023_flow} extends this with mass conservation,
-achieving stronger boundary maintenance.
+Existing ALife systems each excel along different axes of biological fidelity.
+Tierra \citep{ray_1991_approach} and Avida \citep{ofria_2004_avida} achieve
+strong evolutionary dynamics but lack spatial bodies and metabolism.
+Polyworld \citep{yaeger_1994_computational} adds NN-driven behavior and
+single-resource energy budgets.
+Lenia \citep{chan_2019_lenia} and Flow-Lenia \citep{plantec_2023_flow}
+demonstrate emergent spatial organization in continuous cellular automata,
+with Flow-Lenia adding mass conservation.
 ALIEN \citep{heinemann_2008_alien} provides a GPU-accelerated particle
-simulator with typed cells supporting self-replicating structures,
-achieving multi-process interaction on several criteria.
-While ALIEN demonstrates broad coverage, no existing system combines
-multi-step metabolism with active homeostatic regulation.
-
-\paragraph{Chemistry-inspired systems.}
+simulator achieving multi-process interaction on several criteria, though
+its metabolism uses typed particle interactions rather than a multi-step
+metabolic network (Level~3 on our rubric).
 Coralai \citep{barbieux_2024_coralai} combines multi-agent neural cellular
-automata with energy dynamics, implementing rudimentary metabolism and
-spatial organization.
-It represents a step toward metabolic integration but does not achieve
-the feedback coupling between metabolism and other criteria that our
-framework requires.
+automata with energy dynamics but lacks feedback coupling between criteria.
+No existing system combines multi-step metabolism with active homeostatic
+regulation.
 
-\paragraph{Theoretical foundations.}
-The autopoiesis framework \citep{maturana_1980_autopoiesis,
-mcmullin_2004_thirty} emphasizes self-producing boundaries as the
-minimal criterion for life, which our boundary-maintenance mechanism
-operationalizes.
-NASA's working definition---``a self-sustaining chemical system capable of
-Darwinian evolution'' \citep{joyce_1994_foreword}---bundles metabolism and
-evolution but does not individuate the remaining five criteria.
-\citet{ruizmirazo_2004_universal} argue for a richer set of minimal
-conditions, closer to our seven-criteria framework.
-The open-ended evolution research program \citep{bedau_2000_open,
-taylor_2016_openended} provides metrics for evolutionary richness that complement
-our criterion-ablation approach.
+Theoretically, our framework operationalizes autopoiesis
+\citep{maturana_1980_autopoiesis, mcmullin_2004_thirty},
+extends the chemoton's three-subsystem integration
+\citep{ganti_2003_principles}, and enriches NASA's two-criterion
+definition \citep{joyce_1994_foreword} following
+\citet{ruizmirazo_2004_universal}.
+Open-ended evolution metrics \citep{bedau_2000_open,
+taylor_2016_openended} complement our criterion-ablation approach.
 
 Table~\ref{tab:comparison} summarizes how existing systems score on each
-criterion using a five-level rubric (1=absent, 5=self-maintaining/emergent).
+criterion using a five-level rubric.
 
 \begin{table*}[t]
 \centering
@@ -169,14 +157,16 @@ Coralai    & 3 & 3 & 2 & 3 & 3 & 3 & 3 & 20 \\
 \midrule
 \textbf{Ours}$^\dagger$ & \textbf{4} & \textbf{4} & \textbf{4} & 3 & \textbf{4} & \textbf{4} & 3 & \textbf{26} \\
 \bottomrule
-\multicolumn{9}{l}{\footnotesize $^\dagger$Self-assessment; scores may differ under external evaluation.}
+\multicolumn{9}{l}{\footnotesize $^\dagger$Self-assessment; scores may differ under external evaluation.}\\
+\multicolumn{9}{l}{\footnotesize Growth (3) and Evolution (3) represent minimum viable implementations}\\
+\multicolumn{9}{l}{\footnotesize satisfying the functional-analogy conditions.}\\
+\multicolumn{9}{l}{\footnotesize Scores based on published system descriptions; per-criterion justifications}\\
+\multicolumn{9}{l}{\footnotesize available as supplementary material.}
 \end{tabular}
 \end{table*}
 
-While ALIEN achieves Level~4 on four criteria, it lacks multi-step metabolism
-(Level~3) and active homeostasis (Level~2).
-Our system reaches $\geq$4 on five of seven criteria, with the highest total
-score (26) across all systems surveyed.
+Our system reaches $\geq$4 on five of seven criteria, placing it among the
+most broadly integrated ALife systems surveyed.
 We note that these scores are self-assessed; independent evaluation may adjust
 individual ratings.
 
@@ -212,26 +202,28 @@ level.
 Table~\ref{tab:criteria} maps each biological criterion to its computational
 implementation, ablation toggle, and feedback partners.
 
-\begin{table}[t]
+\begin{table*}[t]
 \centering
-\caption{Mapping of seven biological criteria to computational processes.
-Each criterion satisfies the three functional-analogy conditions.}
+\caption{Mechanism specification: state variables, ablation operators, coupling
+pathways, and failure modes for each criterion. All criteria satisfy the three
+functional-analogy conditions (dynamic process, measurable degradation,
+feedback coupling).}
 \label{tab:criteria}
-\small
-\begin{tabular}{@{}p{1.4cm}p{2.8cm}p{2.5cm}@{}}
+\footnotesize
+\begin{tabular}{@{}p{1.5cm}p{2.0cm}p{2.6cm}p{4.0cm}p{2.2cm}@{}}
 \toprule
-Criterion & Process & Feedback \\
+Criterion & State Vars & Ablation & Coupling & Failure \\
 \midrule
-Cell.\ Org. & Swarm agents maintain boundary; decays without energy & Metab, Homeo \\
-Metabolism & Graph network transforms resources to energy; waste accumulates & Cell.\ Org., Homeo \\
-Homeostasis & NN regulates internal state vector each step & Metab, Response \\
-Growth & Maturation from seed to full capacity & Metab, Reprod \\
-Reproduction & Division when metabolically ready; energy cost; offspring from seed & Metab, Evol \\
-Response & NN processes sensory input $\rightarrow$ velocity delta & Homeo, Metab \\
-Evolution & Mutation during reproduction; differential survival & Reprod, all \\
+Cell.\ Org. & $b \in [0,1]$ & Skip repair; decay only & $e \to$ repair rate $\to b$ & $b{<}0.1 \to$ death \\
+Metab. & $e,r,w$; graph $\mathbf{p}$ & Freeze $(e,r,w)$ & throughput $\to e \to$ bdry repair & Energy depletion \\
+Homeo. & $\mathbf{s} \in \mathbb{R}^3$ & Skip NN delta; decay & $s_0 \to$ repair efficacy & State drift \\
+Growth & $m \in [0,1]$ & Freeze $m{=}0$ & maturity $\to$ reprod.\ gate & No reproduction \\
+Reprod. & Pop.\ event & Skip division check & energy cost $\to$ parent $e$ & No replacement \\
+Response & $\mathbf{v}$ & Skip velocity delta & movement $\to$ resource $\to r$ & Starvation \\
+Evolution & genome $\mathbf{g}$ & Copy w/o mutation & $\mathbf{g}$ variation $\to$ all & No adaptation \\
 \bottomrule
 \end{tabular}
-\end{table}
+\end{table*}
 
 \paragraph{Cellular organization.}
 Swarm agents collectively define an organism's spatial extent.
@@ -319,6 +311,19 @@ fully enabled baseline (``normal'' condition).
 This yields eight conditions: one normal baseline and seven single-criterion
 ablations.
 
+\subsection{Outcome Measures}
+
+An \emph{organism} is a persistent runtime entity with a unique ID;
+offspring receive a new ID at division; no merge or split occurs.
+An organism dies when boundary $b < 0.1$, energy $e \leq 0.0$, or
+age $> 20{,}000$ steps.
+The \textbf{primary dependent variable} is $N_T$, the alive organism count
+at the final step $T=2000$; each seed maps to one scalar.
+Secondary DVs include the area under the alive-count curve (AUC,
+trapezoidal rule) and median organism lifespan.
+We additionally report short-horizon viability at $T=500$ to separate
+individual survival from population replacement effects.
+
 \subsection{Data Separation}
 
 To prevent overfitting of thresholds, we separate data into:
@@ -339,7 +344,14 @@ Each simulation runs for 2000 timesteps with population sampled every 50
 steps.
 The environment is a 100$\times$100 toroidal grid with 30 initial organisms,
 each comprising 25 swarm agents.
-The primary outcome metric is alive organism count at step 2000.
+Resources regenerate at 0.01 per cell per step with no diffusion and
+toroidal wrap boundary conditions.
+No early stopping is applied.
+Ablation toggles do not alter timestep duration or event ordering;
+disabled processes are simply skipped.
+Each seed produces a deterministic, reproducible outcome within a given
+condition, though RNG call sequences differ across conditions when
+ablated processes (e.g., reproduction) skip conditional RNG draws.
 
 \subsection{Statistical Design}
 
@@ -351,11 +363,11 @@ using the Mann-Whitney $U$ test \citep{mann_1947_test}, appropriate for
 non-normal count data.
 We apply Holm-Bonferroni correction \citep{holm_1979_simple} for seven
 simultaneous comparisons at $\alpha = 0.05$.
-Effect sizes are reported as both Cohen's $d$ \citep{cohen_1988_statistical}
-and Cliff's $\delta$ \citep{cliff_1993_dominance}, the latter being more
-appropriate for non-normal distributions.
-We additionally report the area under the alive-count curve (AUC) and
-median organism lifespan as secondary outcome measures.
+Effect sizes are reported as Cliff's $\delta$ \citep{cliff_1993_dominance}
+for the primary ablation comparisons, with Cohen's $d$ additionally reported
+for evolution-strengthening experiments to facilitate parametric comparison,
+with percentile bootstrap 95\% confidence intervals (2000 resamples,
+seed-fixed RNG), appropriate for non-normal distributions.
 
 % ============================================================================
 \section{Results}
@@ -365,22 +377,24 @@ decline compared to the normal baseline (Table~\ref{tab:ablation}).
 
 \begin{table}[t]
 \centering
-\caption{Criterion-ablation results ($n$=30 per condition). Normal baseline
-mean: 293.1 (median: 294, IQR: 282--310). All $p$-values Holm-Bonferroni
-corrected. $^{***}p<0.001$, $^{*}p<0.05$.}
+\caption{Criterion-ablation results ($n$=30 per condition).
+Normal baseline mean: 293.1 (median: 294.5, IQR: 281.5--309.5).
+$\delta$=Cliff's delta [bootstrap 95\% CI].
+Seven one-sided tests, Holm-Bonferroni corrected at $\alpha=0.05$.
+$^{***}p<0.001$, $^{*}p<0.05$.}
 \label{tab:ablation}
 \small
-\begin{tabular}{@{}lrrrrrr@{}}
+\begin{tabular}{@{}lr@{\hskip 4pt}r@{\hskip 4pt}l@{\hskip 4pt}r@{\hskip 4pt}r@{}}
 \toprule
-Condition & Mean & $\Delta$\% & $d$ & Cliff's $\delta$ & $p_{\text{corr}}$ & Sig. \\
+Condition & Mean & $\Delta$\% & $\delta$ [95\% CI] & $p_{\text{corr}}$ & Sig. \\
 \midrule
-No Reproduction & 31.3 & $-$89.3 & 18.06 & 1.00 & $<$0.001 & $^{***}$ \\
-No Response     & 34.1 & $-$88.4 & 17.82 & 1.00 & $<$0.001 & $^{***}$ \\
-No Metabolism   & 46.0 & $-$84.3 & 17.24 & 1.00 & $<$0.001 & $^{***}$ \\
-No Homeostasis  & 68.3 & $-$76.7 & 4.94  & 1.00 & $<$0.001 & $^{***}$ \\
-No Boundary     & 121.8 & $-$58.5 & 4.36 & 1.00 & $<$0.001 & $^{***}$ \\
-No Growth       & 185.6 & $-$36.7 & 5.34 & 1.00 & $<$0.001 & $^{***}$ \\
-No Evolution    & 278.3 & $-$5.1  & 0.57 & 0.32 & 0.016 & $^{*}$ \\
+No Reprod.  & 31.3 & $-$89.3 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
+No Response & 34.1 & $-$88.4 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
+No Metab.   & 46.0 & $-$84.3 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
+No Homeo.   & 68.3 & $-$76.7 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
+No Boundary & 121.8 & $-$58.5 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
+No Growth   & 185.6 & $-$36.7 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
+No Evol.    & 278.3 & $-$5.1  & 0.32 [0.02, 0.59] & .016 & $^{*}$ \\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -397,10 +411,41 @@ Metabolic ablation (orange) causes rapid collapse within the first 200 steps,
 as organisms cannot produce energy to maintain boundaries.
 Reproduction ablation (blue) produces a slower but equally terminal decline,
 as the initial population ages and dies without replacement.
-Evolution ablation (purple) shows the weakest effect ($d$=0.57), with
-populations remaining viable but slightly smaller than normal---consistent
+Evolution ablation (purple) shows the weakest effect (Cliff's $\delta$=0.32),
+with populations remaining viable but slightly smaller than normal---consistent
 with evolution operating as an optimization process rather than a survival
 necessity at these timescales.
+AUC of the alive-count curve corroborates $N_T$ rankings across all
+conditions (normal AUC=435{,}376 vs.\ 74{,}545--412{,}518 for ablations).
+Median organism lifespan reveals an individual-vs-population distinction:
+reproduction-ablated organisms live longer individually (median 751 vs.\
+132 steps for normal) despite population collapse, confirming that the
+population decline reflects absent replacement rather than individual
+fragility.
+Per-seed distributions are shown in Figure~\ref{fig:distributions}.
+
+At $T=500$ (before long-term population dynamics dominate),
+reproduction-ablated organisms retain higher survival
+($\bar{x}$=47.7 vs.\ 31.3 at $T=2000$; normal baseline
+$\bar{x}_{\text{normal}}$=153.5 at $T=500$), with 69\% decline
+relative to normal versus 89\% at $T=2000$.
+This progressive widening confirms that the long-term effect is
+population-level (no replacement) rather than immediate individual-level
+failure---organisms can self-maintain without reproduction.
+
+\begin{figure}[t]
+\centering
+\IfFileExists{figures/fig_distributions.pdf}%
+  {\includegraphics[width=\columnwidth]{figures/fig_distributions.pdf}}%
+  {\fbox{\parbox{\dimexpr\columnwidth-2\fboxsep-2\fboxrule}{%
+    \centering\vspace{2em}[fig\_distributions.pdf --- to be generated]\vspace{2em}}}}
+\caption{Per-seed distributions of final alive count ($N_T$) across all
+conditions ($n$=30 per condition). Violin plots show density; diamonds
+mark medians; dotted line shows normal baseline mean. The distribution
+confirms that ablation effects are consistent across seeds, not driven
+by outliers.}
+\label{fig:distributions}
+\end{figure}
 
 \begin{figure*}[t]
 \centering
@@ -409,8 +454,8 @@ necessity at these timescales.
 count across 30 seeds (100--129); shaded bands show $\pm$1 SEM. Normal
 baseline (thick black) stabilizes near 293 organisms by step~1900. Removing reproduction,
 response, or metabolism causes $>$84\% population collapse. Evolution ablation
-shows a modest 5\% decline ($d$=0.57), consistent with optimization rather
-than short-term survival necessity.}
+shows a modest 5\% decline (Cliff's $\delta$=0.32), consistent with optimization
+rather than short-term survival necessity.}
 \label{fig:timeseries}
 \end{figure*}
 
@@ -422,6 +467,20 @@ computation, NN evaluation);
 (c)~feedback loops are observable (e.g., metabolism~$\leftrightarrow$~boundary:
 energy funds repair, boundary collapse stops metabolism).
 Thus, each criterion qualifies as a functional analogy, not a simplified proxy.
+
+\paragraph{Quantitative coupling evidence.}
+Time-lagged cross-correlation of per-step population means under normal
+conditions confirms the coupling pathways in Table~\ref{tab:criteria}.
+Energy and boundary integrity show strong anti-correlation
+($r=-0.85$, $p<0.001$, lag~0): repair continuously converts energy
+into boundary maintenance ($\Delta b_{\text{repair}} \propto e$),
+so higher boundary integrity corresponds to depleted energy reserves.
+Energy and internal state $s_0$ show strong positive correlation
+($r=0.81$, $p<0.001$, lag~3 steps), confirming that metabolic state
+drives homeostatic regulation with a short delay.
+Boundary integrity and $s_0$ show moderate correlation
+($r=-0.55$, $p<0.001$, lag~3), consistent with the
+homeostasis$\to$boundary pathway operating through repair efficacy.
 
 \subsection{Proxy Control Comparison}
 
@@ -480,18 +539,18 @@ failure pathways). Baseline $\bar{x}$=293.1, consistent with
 Table~\ref{tab:ablation}.}
 \label{tab:pairwise}
 \small
-\begin{tabular}{@{}lrrrr@{}}
+\begin{tabular}{@{}l@{\hskip 5pt}r@{\hskip 5pt}r@{\hskip 5pt}r@{\hskip 5pt}r@{}}
 \toprule
-Pair & $\Delta_{AB}$ & Expected & Synergy & Ratio \\
+Pair & $\Delta_{AB}$ & Exp. & Syn. & Ratio \\
 \midrule
-(Metab, Homeo)    & 249.9 & 472.0 & $-$222.0 & 0.53 \\
-(Metab, Response)  & 247.7 & 506.1 & $-$258.4 & 0.49 \\
+(Metab, Homeo)     & 249.9 & 472.0 & $-$222.0 & 0.53 \\
+(Metab, Resp.)     & 247.7 & 506.1 & $-$258.4 & 0.49 \\
 (Reprod, Growth)   & 261.9 & 369.4 & $-$107.5 & 0.71 \\
-(Boundary, Homeo)  & 181.9 & 396.2 & $-$214.3 & 0.46 \\
-(Response, Homeo)  & 256.4 & 483.9 & $-$227.5 & 0.53 \\
+(Bdry, Homeo)      & 181.9 & 396.2 & $-$214.3 & 0.46 \\
+(Resp., Homeo)     & 256.4 & 483.9 & $-$227.5 & 0.53 \\
 (Reprod, Evol)     & 261.9 & 276.7 & $-$14.9  & 0.95 \\
 \bottomrule
-\multicolumn{5}{l}{\footnotesize Expected = $\Delta_A + \Delta_B$ (additive null model); Ratio = $\Delta_{AB}$ / Expected.}
+\multicolumn{5}{@{}l@{}}{\footnotesize Exp.\ = $\Delta_A{+}\Delta_B$; Ratio = $\Delta_{AB}$/Exp.}
 \end{tabular}
 \end{table}
 
@@ -585,9 +644,34 @@ produces higher diversity but lower populations than simpler alternatives),
 ruling out tautological definitions.
 
 \paragraph{Evolution at longer timescales.}
-The modest 2000-step evolution effect ($d$=0.57) grows to $d$=1.43 at
-10,000 steps and $d$=1.01 under environmental perturbation, confirming
-that evolutionary adaptation accumulates across generations.
+The modest 2000-step evolution effect ($d$=0.57, $\delta$=0.32) grows to
+$d$=1.43 ($\delta$=0.72) at 10,000 steps and $d$=1.01 ($\delta$=0.57)
+under environmental perturbation, confirming that evolutionary adaptation
+accumulates across generations.
+
+\paragraph{Are criteria merely engineered?}
+One might argue that criterion ablation merely reflects system
+design---disabling any engineered subsystem would degrade performance.
+Three lines of evidence argue against this interpretation.
+First, the proxy control comparison shows that alternative metabolism
+implementations satisfying the same functional-analogy definition produce
+qualitatively distinct ecological dynamics (Figure~\ref{fig:proxy}),
+ruling out tautological definitions.
+Second, pairwise ablations reveal sub-additive interactions
+(Table~\ref{tab:pairwise}), indicating shared failure pathways
+inconsistent with independent modules.
+Third, the no-evolution ablation---which runs identical reproduction
+machinery but copies genomes without mutation---serves as a near-sham
+control: its modest effect ($\Delta$=$-$5.1\%) demonstrates that
+non-functional modifications have proportionally small effects.
+
+\paragraph{Criterion maturity.}
+Criteria are at varying levels of implementation maturity: five criteria
+(cellular organization, metabolism, homeostasis, reproduction, response)
+reach Level~4 (multi-process interaction), while growth and evolution
+are at Level~3 (dynamic single process).
+Evolution demonstrates heritable variation and differential survival,
+sufficient for functional analogy though not open-ended evolution (Level~5).
 
 \subsection{Limitations}
 
